2010-04-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calUtils.js (calGetString): instead of
	returning a useless failure string, we return the property key
	instead. This enables the same behaviour as with gettext.

2010-03-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-task-tree.xml
	(calendar-task-tree.refresh): we enable the "aCompleteRefresh"
	argument only when the current calendar in the loop is the first
	one, otherwise, the shown tasks will only be those of the latest
	in the list.

2010-03-31  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/content/calendar-summary-dialog.xul
	Fixed typo which would prevent setting a reminder of
	1 week for received invitations

	* src/calendar/base/content/calendar-item-editing.js
	Modified the checkAndSendItipMessage() function so that
	if the part-state is the same and the delegated-to is
	the same, we just don't send any invitatation reply.
	This was causing major pain when simply setting a reminder
	to an invitation email.

2010-03-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (checkServerCaps): SOGo
	provides a "false" inbox too but the caldav provider handles it
	wrong. In particular, the inbox "calendar" is not a separate
	instance, which causes an overwrite of the metadata when a regular
	calendar and its corresponding inbox are updated.

	* src/calendar/base/content/calendar-task-tree.xml
	(calendar-task-tree.mTaskTreeObserver.onPropertyChanged): take the
	"showInTodayPane" property into account, if this tree is part of
	the today-pane.
	(calendar-task-tree.mustShowInTaskTree): new method that returns
	true if the id of the current tree is "unifinder-todo-tree" and
	the calendar passed as parameter has its "showInTodayPane"
	propery set.

2010-03-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js