@@ -147,3 +147,7 @@ yearlyOrder=%1$S %2$S
 # %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
+
+delegated from=delegated from
+The selected delegate is already present in the attendees list.=The selected delegate is already present in the attendees list.
+The delegate must be a valid contact name.=The delegate must be a valid contact name.
