@@ -148,3 +148,7 @@ yearlyOrder=%1$S %2$S
 # %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
 # If you don't need %3$S in your locale - please put this on the third place.
 yearlyOrder2=%1$S %2$S %3$S %4$S
+
+delegated from=délégué par
+The selected delegate is already present in the attendees list.=Le délégué sélectionné fait déja partie des invités.
+The delegate must be a valid contact name.=Le délégué doit avoir un nom de contact valide.
